--- a/config/.env
+++ b/config/.env
@@ -1,7 +1,7 @@
 PORT=3000
 ENV=DEV
 BASEURL=/api/v1
-DBURI=mongodb+srv://maryammohamedsobhy357:<9XroKBy9mGXjRwg5>@commerceapi.ixyzsgd.mongodb.net/
+DBURI=mongodb+srv://maryammohamedsobhy357:<MONGODB1>@commerceapi.ixyzsgd.mongodb.net/
 SALTROUND=9
 senderEmail=routefridayweek8@outlook.com
 senderPassword=1478530123Rr
