--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,17 @@
     "version": 2,
     "builds": [
         {
-            "src": "app.js",
-            "use": "@vercel/node"
+            "src": "./app.js",
+            "use": "@vercel/node",
+            "config": {
+                "nodeVersion": "18.x"
+            }
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "./app.js"
         }
     ]
   }
